# python_final_project

./: README.md  cleaned_eeg_data.csv  finalproject.toml  main.ipynb  main.py  notebook.ipynb  pyproject.toml  requierments  requirements  test_data_analysis.py  test_data_cleaning.py  test_data_visualization.py  test_model.py
python_final_project/: main.py  script.py
python_final_project/src/: data_analysis.py
src/: data_analysis.py  data_cleaning.py  data_preprocessing.py  data_visualization.py  model.py  test_data_cleaning.py
tests/: test_data_cleaning.py
