[tool.poetry]
name = "eeg-psychiatric-descriptions"
version = "0.1.0"
description = "A programming project analyzing EEG data for psychiatric disorder classification."
authors = ["Ohad Gonen, Ora Friedman <ohadgonen0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
seaborn = "^0.12.2"
mne = "^1.2.2"
scikit-learn = "^1.2.0"
networkx = "^3.0"
imbalanced-learn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.12"
flake8 = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
