[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-psychiatric-descriptions"
requires-python = ">=3.12"
version = "0.1.0"
description = "A programming project analyzing EEG data for psychiatric disorder classification."
authors = ["Ohad Gonen, Ora Friedman <ohadgonen0@gmail.com> <oranechama@gmail.com>"]
license = "MIT"
dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "matplotlib==3.9.2",
    "scipy==1.14.0",
    "seaborn==0.12.2",
    "mne==1.2.2",
    "networkx==3.0",
    "imbalanced-learn==0.10.1",
    "unittest"
]

[project.optional-dependencies]
dev = [
    "eeg-psychiatric-descriptions[lint]",
    "eeg-psychiatric-descriptions[test]",
    "eeg-psychiatric-descriptions[build]",
]
lint = [
    "ruff",
]
test = [
    "tox",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]==7.3.1",
    "pytest-html==4.1.1"
]
build = [
    "build>=1.2.2",
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = ["conf.py"]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "ISC001",
    "ANN101",
    "PT001",
    "PT004",
    "PT005",
    "PT023",
    "D415",
    "D416"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",
    "D103"
]
"**/__init__.py" = [
    "F401",
    "F403",
    "D104"
]
"docs/**" = [
    "INP001"
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "my-project-\\d+",
    "venv.*/",
    "build/",
    "dist/"
]